# src/api/routers/gsts.go
@@ -10,5 +10,8 @@ import (
 func Gst(router *gin.RouterGroup, cfg *config.Config) {
 	h := handlers.NewGstsHandler(cfg)
 
-	router.POST("/", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}), h.CreateGST)
+	router.POST("/", middlewares.Authorization([]string{"admin"}), h.CreateGst)
+	router.POST("/page", middlewares.Authorization([]string{"admin"}), h.GetGsts)
+	router.GET("/", middlewares.Authorization([]string{"admin"}), h.GetGsts)
+	router.PUT("/:gstin/statuses", middlewares.Authorization([]string{"admin"}), h.UpdateGstStatuses)
 }
