# src/data/models/gst.go
@@ -8,13 +8,13 @@ import (
 
 type Gst struct {
 	BaseModel
-	Gstin            string    `gorm:"type:string;size:30;not null,unique"`
-	TradeName        string    `gorm:"type:string;size:64;not null"`
-	RegistrationDate time.Time `gorm:"type:TIMESTAMP;default:CURRENT_TIMESTAMP;not null"`
-	Locked           bool      `gorm:"type:bool;default:false"`
-	Address          string    `gorm:"type:string;size:128;null"`
-	MobileNumber     string    `gorm:"type:string;size:10;null;default:null"`
-	GSTStatuses      []GstStatus
+	Gstin            string      `gorm:"type:string;size:30;not null,unique"`
+	TradeName        string      `gorm:"type:string;size:64;not null"`
+	RegistrationDate time.Time   `gorm:"type:TIMESTAMP;default:CURRENT_TIMESTAMP;not null"`
+	Locked           bool        `gorm:"type:bool;default:false"`
+	Address          string      `gorm:"type:string;size:128;null"`
+	MobileNumber     string      `gorm:"type:string;size:10;null;default:null"`
+	GstStatuses      []GstStatus `gorm:"foreignKey:Gstin;references:Gstin"`
 }
 
 type GstStatus struct {
@@ -25,5 +25,5 @@ type GstStatus struct {
 	PendingReturns string
 	TaxPeriod      string
 	Notes          string
-	GstID          uint
+	Gstin          string `gorm:"type:string;size:30;not null,unique"`
 }
